--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ Projects/T0/HF_Proj/LOB-master/lob_modeling/log/
 Projects/T0/CNN/model
 Projects/T0/HF_Proj/transformer-master/docs/source/notebooks/trainings
 Projects/T0/tansformer/docs/source/notebooks/trainings
-
+Projects/T0/tf-torch-template/data
 
 
 # Byte-compiled / optimized / DLL files
